--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -19,7 +19,7 @@ jobs:
           API_BASE_URL: https://wakatime.com/api # optional
           REPOSITORY: navirobayo/navirobayo # optional
           ### content
-          BLOCKS: ▒
+          BLOCKS: ░ # optional
           SHOW_TITLE: true # optional
           SECTION_NAME: Cool stats # optional
           TIME_RANGE: all_time # optional
