--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -19,9 +19,9 @@ jobs:
           API_BASE_URL: https://wakatime.com/api # optional
           REPOSITORY: navirobayo/navirobayo # optional
           ### content
-          SHOW_TITLE: false
           SECTION_NAME: Cool stats # optional
-          BLOCKS: ░
+          SHOW_TITLE: true
+          CODE_LANG: dart
           TIME_RANGE: all_time # optional
           LANG_COUNT: 10 # optional
           SHOW_TIME: true # optional
