--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -20,12 +20,12 @@ jobs:
           ### content
           SHOW_TITLE: false
           TIME_RANGE: all_time
-          LANG_COUNT: 10 # optional
-          SHOW_TIME: true # optional
+          LANG_COUNT: 5
+          SHOW_TIME: true
           SHOW_TOTAL: true
           BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
-          SHOW_MASKED_TIME: false # optional
-          STOP_AT_OTHER: true # optional
+          SHOW_MASKED_TIME: false
+          STOP_AT_OTHER: false
           ### commit
           COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
           TARGET_BRANCH: master # optional
